hphp/test/slow/traits/conflicts/rename_one.php.expectf
Dog

Fatal error: Call to undefined method C::f() in %s/rename_one.php on line 12
